margin fixed, button spacing corrected, navbar for home redone

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -2,7 +2,7 @@
   margin-top: 1.5pc;
   color: #FAF0CA;
   padding: 14px 20px;
-  border-radius: 5px;
+  border-radius: 6px;
   background: #6B2D5C;
   transition: background 0.3s ease;
   margin-top: 3.5pc;
@@ -13,7 +13,7 @@
   margin-top: 1.5pc;
   color: #FAF0CA;
   padding: 14px 20px;
-  border-radius: 5px;
+  border-radius: 6px;
   background: #6B2D5C;
   transition: background 0.3s ease;
   margin-top: 3.5pc;
